--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -35,6 +35,16 @@ a {
   transition: var(--transition);
 }
 
+:focus-visible {
+  outline: 2px solid var(--gold);
+  outline-offset: 3px;
+}
+
+::placeholder {
+  color: var(--text-medium);
+  opacity: 0.8;
+}
+
 img {
   max-width: 100%;
   display: block;
